Fix jumping to the right position in chat history, closes #453
  - Add Dialog.endOfHistory
  - Add Scrollspy.findVisibleElements()
  - Add Scrollspy.keepPos()
  - Add Scrollspy.onScroll()
  - Add "scroll" event to Scrollspy
  - Add isISOTimeString() to Time.js
  - Add cb.debounceTid inside debounce() to check if the function is
    going to be called in the future
  - Route.go() allow keeping the current state
  - Time.setX() methods will return time object

--- a/assets/sass/components/_chat-messages.scss
+++ b/assets/sass/components/_chat-messages.scss
@@ -93,6 +93,11 @@
   &.has-not-same-from {
     margin-top: 0.5rem;
   }
+
+  &.has-focus .message__ts {
+    font-weight: bold;
+    opacity: 1;
+  }
 }
 
 .message blockquote {
